--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lenddo/react-native-sdk",
-  "version": "1.8.2",
+  "version": "1.8.3-android",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
